Changelog
=========

1.5.7 (unreleased)
------------------

- Slovak translation.
  [lck]

- Insert html from ajax response into portlet only on expected response.
  If the user does not have sufficient privileges, the login page is returned
  in the ajax response instead of the expected portlet content.
  [vsomogyi]

- Disabled Diazo theming in the @@quickupload view.
  [dokai]

- Update German translations.
  [jone]

- made it work with plone 4.3 (import changed)
  [jensens, bennyboy]


1.5.6 (2012-10-09)
------------------

- Dexterity-related fixes.
  [till44]

- Updated po files and french translation.
  [thomasdesvenain]

- Updated italian translation.
  [giacomos]


1.5.5 (2012-08-25)
------------------

- Added a specific error message if upload failed
  because content type is disallowed in the folder.
  [thomasdesvenain]


1.5.4 (2012-08-17)
------------------

- Remove creation flag once content has been created
  and file loaded.
  [thomasdesvenain]

- Updated zh-tw and it translations.
  [l34marr, giacomos]

1.5.3 (2012-07-13)
------------------

- Fixed title generation
  if we have more than one "." character in file name.
  Fixes http://plone.org/products/collective.quickupload/issues/24
  [Manuel Reinhart, thomasdesvenain]

- Portlet form doesn't break
  when a content type implements IFileContent and IImageContent.
  Fixes http://github.com/collective/collective.quickupload/issues/9.
  [vito80ba, thomasdesvenain]

- Works without plone.uuid
  (for example with a Plone 4.0.x basic install).
  [frisi, do3cc, thomasdesvenain]

- Updated chinese translation.
  [jianaijun]


1.5.2 (2012-06-29)
------------------

- Better error message when MissingExtension error.
  [thomasdesvenain]

- Fixed upload when filename has special characters under IE.
  [thomasdesvenain]


1.5.1 (2012-05-24)
------------------

- Fixed Spanish language code.
  [thomasdesvenain]

1.5 (2012-05-24)
----------------
