@@ -4,6 +4,11 @@ Changelog
 1.5.7 (unreleased)
 ------------------
 
+- Fix: if auto version policy is selected for content type,
+  a version is saved when we replace a file using quickupload
+  (notify object edited instead of object modified).
+  [thomasdesvenain]
+
 - Slovak translation.
   [lck]
 
